Table roles {
  id int [pk, increment]
  nombre varchar(50) [unique, not null]
  descripcion text
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Roles del sistema: admin, medico, cuidador, apoderado, paciente'
}

Table permisos {
  id int [pk, increment]
  nombre varchar(50) [unique, not null]
  descripcion text
  modulo varchar(50)
  
  Note: 'Permisos específicos del sistema'
}

Table rol_permisos {
  rol_id int [ref: > roles.id]
  permiso_id int [ref: > permisos.id]
  
  indexes {
    (rol_id, permiso_id) [pk]
  }
  
  Note: 'Permisos asignados a cada rol'
}
s
Table usuarios {
  id int [pk, increment]
  nombre varchar(100) [not null]
  email varchar(100) [unique, not null]
  password varchar(255) [not null]
  telefono varchar(20)
  rol_id int [not null, ref: > roles.id]
  activo boolean [default: true]
  email_verificado boolean [default: false]
  ultimo_acceso timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Tabla central de usuarios del sistema'
}

// ==========================================
// TIPOS DE USUARIOS ESPECÍFICOS
// ==========================================

Table personal_medico {
  usuario_id int [pk, ref: - usuarios.id]
  especialidad varchar(100)
  numero_colegiatura varchar(50) [unique]
  institucion varchar(100)
  anos_experiencia int
  
  Note: 'Información específica del personal médico'
}

Table cuidadores {
  usuario_id int [pk, ref: - usuarios.id]
  certificaciones text
  experiencia_anos int
  disponibilidad_horaria varchar(100)
  tarifa_hora decimal(8,2)
  
  Note: 'Información específica de cuidadores'
}

Table apoderados {
  usuario_id int [pk, ref: - usuarios.id]
  relacion_paciente varchar(50)
  es_contacto_emergencia boolean [default: true]
  
  Note: 'Información específica de apoderados/tutores'
}

// ==========================================
// SISTEMA DE PACIENTES
// ==========================================

Table generos {
  id char(1) [pk]
  nombre varchar(20) [unique, not null]
  
  Note: 'M: Masculino, F: Femenino, O: Otro'
}

Table pacientes {
  id int [pk, increment]
  usuario_id int [ref: > usuarios.id, note: 'Opcional - paciente puede no tener cuenta']
  nombre varchar(100) [not null]
  fecha_nacimiento date
  genero_id char(1) [ref: > generos.id]
  numero_documento varchar(20) [unique]
  tipo_documento varchar(10)
  tipo_sangre varchar(10)
  altura decimal(5,2)
  direccion text
  telefono_emergencia varchar(20)
  observaciones_medicas text
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Pacientes del sistema - pueden o no tener cuenta de usuario'
}

// ==========================================
// RELACIONES ENTRE PACIENTES Y USUARIOS
// ==========================================

Table paciente_apoderados {
  paciente_id int [ref: > pacientes.id]
  apoderado_usuario_id int [ref: > apoderados.usuario_id]
  es_principal boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    (paciente_id, apoderado_usuario_id) [pk]
  }
  
  Note: 'Un paciente puede tener múltiples apoderados'
}

Table paciente_cuidadores {
  paciente_id int [ref: > pacientes.id]
  cuidador_usuario_id int [ref: > cuidadores.usuario_id]
  fecha_asignacion date [not null]
  fecha_fin date
  activo boolean [default: true]
  
  indexes {
    (paciente_id, cuidador_usuario_id) [pk]
  }
  
  Note: 'Asignación de cuidadores a pacientes'
}

Table paciente_medicos {
  paciente_id int [ref: > pacientes.id]
  medico_usuario_id int [ref: > personal_medico.usuario_id]
  es_medico_principal boolean [default: false]
  fecha_asignacion date [not null]
  fecha_fin date
  especialidad_tratamiento varchar(100)
  
  indexes {
    (paciente_id, medico_usuario_id) [pk]
  }
  
  Note: 'Asignación de médicos a pacientes'
}

// ==========================================
// MEDICAMENTOS (ESTRUCTURA SIMPLE ACTUAL)
// ==========================================

Table medicamentos {
  id int [pk, increment]
  nombre varchar(255) [not null]
  medida varchar(255) [not null]
  unidad_medida varchar(255) [not null]
  descripcion text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Tabla simple actual de medicamentos - será reemplazada por sistema complejo'
}

// ==========================================
// SISTEMA DE AUDITORÍA Y SESIONES
// ==========================================

Table sesiones_usuario {
  id varchar(255) [pk]
  usuario_id int [ref: > usuarios.id]
  ip_address varchar(45)
  user_agent text
  activa boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  expires_at timestamp [not null]
  
  Note: 'Gestión de sesiones activas de usuarios'
}

// ==========================================
// TABLAS ADICIONALES DE LARAVEL
// ==========================================

Table users {
  id int [pk, increment]
  name varchar(255) [not null]
  email varchar(255) [unique, not null]
  email_verified_at timestamp
  password varchar(255) [not null]
  remember_token varchar(100)
  created_at timestamp
  updated_at timestamp
  
  Note: 'Tabla de usuarios por defecto de Laravel (puede estar en paralelo)'
}

Table cache {
  key varchar(255) [pk]
  value mediumtext [not null]
  expiration int [not null]
}

Table jobs {
  id bigint [pk, increment]
  queue varchar(255) [not null]
  payload longtext [not null]
  attempts tinyint [not null]
  reserved_at int
  available_at int [not null]
  created_at int [not null]
}